Add close connection in server